k8s/talos/infra/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan
      namespace: traefik
      sectionName: web

  hostnames:
    - argocd.home.lanlord.eu

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
